--- a/WebContent/IslasBaleares.html
+++ b/WebContent/IslasBaleares.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Islas Baleares</title>
+<title>Illes Balears</title>
 <link rel="stylesheet" href="estilos.css"/>
 
 </head>
